--- a/styles/home.scss
+++ b/styles/home.scss
@@ -83,3 +83,11 @@ body {
    padding: 0 10px;
    text-decoration: none;
  }
+
+ .navbar-count {
+   color: inherit;
+   display: block;
+   float: right;
+   margin-top: 24px;
+   margin-right: 10px;
+ }
