--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,7 +7,7 @@ body {
   }
 
  .chatbar {
-   background: tomato;
+   background: cornflowerblue;
    border-top: 1px solid black;
    bottom: 0;
    display: flex;
@@ -62,7 +62,7 @@ body {
  }
 
  .navbar {
-   background: tomato;
+   background: cornflowerblue;
    border-bottom: 1px solid black;
    height: 60px;
    left: 0;
