--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,13 +1,13 @@
 body {
-     background: white;
-     color: black;
-     font-family: 'Open Sans', sans-serif;
-     font-size: 14px;
-     margin: 70px 0;
-  }
+  background: white;
+  color: black;
+  font-family: 'Lucida Sans', sans-serif;
+  font-size: 14px;
+  margin: 70px 0;
+}
 
  .chatbar {
-   background: cornflowerblue;
+   background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%);
    border-top: 1px solid black;
    bottom: 0;
    display: flex;
@@ -62,7 +62,7 @@ body {
  }
 
  .navbar {
-   background: cornflowerblue;
+   background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%);
    border-bottom: 1px solid black;
    height: 60px;
    left: 0;
@@ -73,7 +73,7 @@ body {
  }
 
  .navbar-brand {
-   color: inherit;
+   color: #FFFFFF;
    display: block;
    float: left;
    font-weight: 700;
